--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,14 @@ find_package(${ASPOSE_SLIDES} REQUIRED CONFIG PATHS ${ASPOSE_ROOT} NO_DEFAULT_PA
 file(TO_NATIVE_PATH "${ASPOSE_CORE}/lib" ${ASPOSE_CORE}_DLL_PATH)
 file(TO_NATIVE_PATH "${Aspose.Slides.Cpp_DIR}/lib" ${ASPOSE_CORE}_DLL_PATH)
 
+#Qt
+find_package(Qt5 REQUIRED COMPONENTS Core Gui)
+if(CMAKE_VERSION VERSION_LESS "3.7.0")
+    set(CMAKE_INCLUDE_CURRENT_DIR ON)
+endif()
+set(CMAKE_AUTOUIC ON)
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
 
 target_include_directories(
 	${TARGET_NAME}
@@ -38,4 +46,6 @@ target_link_libraries(${TARGET_NAME}
 	PRIVATE ${Boost_LIBRARIES}
 	PRIVATE ${ASPOSE_CORE}
 	PRIVATE ${ASPOSE_SLIDES}
+	PRIVATE Qt5::Core
+	PRIVATE Qt5::Gui
 )
