--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,7 +32,7 @@ file(TO_NATIVE_PATH "${ASPOSE_CORE}/lib" ${ASPOSE_CORE}_DLL_PATH)
 file(TO_NATIVE_PATH "${Aspose.Slides.Cpp_DIR}/lib" ${ASPOSE_CORE}_DLL_PATH)
 
 #Qt
-find_package(Qt5 5.15.12 EXACT REQUIRED COMPONENTS Core Gui Pdf)
+find_package(Qt5 5.15 REQUIRED COMPONENTS Core Gui Pdf)
 if(CMAKE_VERSION VERSION_LESS "3.7.0")
     set(CMAKE_INCLUDE_CURRENT_DIR ON)
 endif()
